@@ -1,3 +1,10 @@
+2008-08-15  John Carr  <john.carr@unrouted.co.uk>
+
+	* jhbuild/commands/bot.py,
+	* jhbuild/buildbot/steps/py: Remove the need for any slave side
+	custom code (call jhbuild updateone from server using 
+	RemoteShellCommand)
+
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/buildbot/status/web/__init__.py: also include total of
